--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,16 @@ dependencies {
     //import video/blog
     implementation 'com.squareup.picasso:picasso:2.71828'
     //import bottombar
-    compile 'com.roughike:bottom-bar:2.3.0'
+    implementation 'com.roughike:bottom-bar:2.3.0'
     //import circle image
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.daimajia.numberprogressbar:library:1.4@aar'
-    compile 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     //support firebase
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-auth:16.2.0'
     implementation 'com.google.firebase:firebase-database:16.1.0'
+    //phone
+    implementation 'com.hbb20:ccp:2.2.7'
 }
+apply plugin: 'com.google.gms.google-services'
