--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,18 @@
     package="com.example.yummy">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Activity.PhoneActivity"></activity>
         <activity android:name=".Activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,16 +23,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".Activity.LoginActivity"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".Activity.BottomBarActivity"/>
-        <activity android:name=".Activity.RegisterActivity"
-            android:windowSoftInputMode="adjustResize"/>
-
+        <activity
+            android:name=".Activity.LoginActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".Activity.BottomBarActivity" />
+        <activity
+            android:name=".Activity.RegisterActivity"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
