commit detail restaurant

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
-    <meta-data
-        android:name="com.google.android.gms.version"
-        android:value="@integer/google_play_services_version" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +16,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyB9v2vE1hC-ojehepfnkcCSwBp6BLVTsN4" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity android:name=".Activity.PhoneActivity"></activity>
         <activity android:name=".Activity.WelcomeActivity">
             <intent-filter>
@@ -40,6 +44,8 @@
         <activity
             android:name=".Activity.RegisterActivity"
             android:windowSoftInputMode="adjustResize" />
+
+        <activity android:name=".Activity.RestaurantDetailActivity"/>
     </application>
 
 </manifest>
