--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,15 +37,16 @@ dependencies {
     //import bottombar
     implementation 'com.roughike:bottom-bar:2.3.0'
     //import circle image
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     //support firebase
     implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     //location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
     //phone
     implementation 'com.hbb20:ccp:2.2.7'
 }
