--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation files('libs/YouTubeAndroidPlayerApi-1.2.2.jar')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
@@ -49,4 +50,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     //phone
     implementation 'com.hbb20:ccp:2.2.7'
+    implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
+    implementation 'com.tomer:fadingtextview:2.5'
 }
