commit detail restaurant

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
             android:windowSoftInputMode="adjustResize" />
 
         <activity android:name=".Activity.RestaurantDetailActivity"/>
+        <activity android:name=".Activity.ImgDetailReviewActivity"/>
+        <activity android:name=".Activity.RestaurantActivity"/>
     </application>
 
 </manifest>
