--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-auth:16.2.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
     //location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     //phone
     implementation 'com.hbb20:ccp:2.2.7'
     implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
