commit detail restaurant

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".Activity.RestaurantDetailActivity"/>
         <activity android:name=".Activity.ImgDetailReviewActivity"/>
         <activity android:name=".Activity.RestaurantActivity"/>
+        <activity android:name=".Activity.InforUserActivity"/>
     </application>
 
 </manifest>
