--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <activity android:name=".Activity.RestaurantDetailActivity"/>
         <activity android:name=".Activity.ImgDetailReviewActivity"/>
         <activity android:name=".Activity.RestaurantActivity"/>
-        <activity android:name=".Activity.InforUserActivity"/>
+        <activity android:name=".Activity.InfoUserActivity"/>
         <activity android:name=".Activity.ChangeAddressActivity" />
     </application>
 
