--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -16,15 +16,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Activity.ResetPassActivity"></activity>
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyB9v2vE1hC-ojehepfnkcCSwBp6BLVTsN4" />
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".Activity.PhoneActivity"></activity>
+        <activity android:name=".Activity.PhoneActivity" />
         <activity android:name=".Activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,11 +45,10 @@
         <activity
             android:name=".Activity.RegisterActivity"
             android:windowSoftInputMode="adjustResize" />
-
-        <activity android:name=".Activity.RestaurantDetailActivity"/>
-        <activity android:name=".Activity.ImgDetailReviewActivity"/>
-        <activity android:name=".Activity.RestaurantActivity"/>
-        <activity android:name=".Activity.InforUserActivity"/>
+        <activity android:name=".Activity.RestaurantDetailActivity" />
+        <activity android:name=".Activity.ImgDetailReviewActivity" />
+        <activity android:name=".Activity.RestaurantActivity" />
+        <activity android:name=".Activity.InforUserActivity" />
     </application>
 
 </manifest>
