--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,12 @@ dependencies {
     implementation 'com.hbb20:ccp:2.2.7'
     implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
     implementation 'com.tomer:fadingtextview:2.5'
+    //facebook
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    //sign in gg
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
