--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
         <activity android:name=".Activity.AddressHistoryActivity" />
         <activity android:name=".Activity.BlogActivity" />
         <activity android:name=".Activity.OrderCustomActivity"/>
+        <activity android:name=".Activity.OrderDetailActivity" />
 
     </application>
 
