--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,11 @@
 
         <activity android:name=".Activity.PhoneActivity" />
         <activity android:name=".Activity.WelcomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <meta-data
@@ -49,14 +53,9 @@
         <activity android:name=".Activity.AddressHistoryActivity" />
         <activity android:name=".Activity.BlogActivity" />
         <activity android:name=".Activity.OrderCustomActivity"/>
-        <activity android:name=".Activity.OrderDetailActivity" />
         <activity android:name=".Activity.HomePartnerActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        <activity android:name=".Activity.RestaurantManageActivity" />
 
     </application>
 
