--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,7 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:1.1.3@aar'
     implementation 'com.nineoldandroids:library:2.4.0'
     // This dude gave a shoutout to you (daimajia) on his github page:
-    implementation 'jp.wasabeef:recyclerview-animators:1.0.2@aar'
+    implementation 'jp.wasabeef:recyclerview-animators:1.0.3@aar'
+    //4D button
+    implementation 'pl.bclogic:pulsator4droid:1.0.3'
 }
