--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,8 @@
         <activity android:name=".Activity.HomePartnerActivity" >
         </activity>
         <activity android:name=".Activity.RestaurantManageActivity" />
+        <activity android:name=".Activity.ManageAccountAdmin" />
+        <activity android:name=".Activity.AddRestaurantActivity" />
 
     </application>
 
