--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity android:name=".Activity.ManageRestaurantAdminActivity" />
         <activity android:name=".Activity.ManageBlogAdminActivity" />
         <activity android:name=".Activity.ManageStatisticAdminActivity" />
+        <activity android:name=".Activity.NearByActivity" />
 
     </application>
 
