search by image

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     implementation 'pl.bclogic:pulsator4droid:1.0.3'
     //chart
     implementation 'im.dacer:AndroidCharts:1.0.4'
+    //search by img
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
