--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     //chart
     implementation 'im.dacer:AndroidCharts:1.0.4'
     //search by img
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'org.jsoup:jsoup:1.12.1'
 }
